--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
     "mongoose": "^8.8.0",
     "next": "^15.0.3",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "query-string": "^9.1.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
-    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-just-parallax": "^3.1.16",
     "scroll-lock": "^2.1.5",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^6.0.0",
