--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/forms": "^0.5.9",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.1",
